Spacing fix

--- a/docroot/sites/all/themes/custom/mmorpg/sass/base/_forms.scss
+++ b/docroot/sites/all/themes/custom/mmorpg/sass/base/_forms.scss
@@ -20,3 +20,10 @@
 .btn.large {
   border: 0;
 }
+.center-content {
+  .views-exposed-form {
+    .views-exposed-widgets {
+      padding-bottom: 1em;
+    }
+  }
+}
